# census

./: .gitignore  Cargo.toml  README.md
backend/: Cargo.toml
backend/src/: main.rs
commons/: Cargo.toml
commons/src/: lib.rs
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/src/: main.rs
